# ProphecyCM

./: .gitignore  README.md  lore_world_building.docx  mainquest_branching_dialogue.txt  mainquest_canonnical_route.txt  pyproject.toml  world_gazetteer.txt
content/samples/: README.md  dusk_elf_cleric_3.json  human_ranger_3.json
docs/content/: seeds.md
docs/data-model/: README.md
docs/data-model/fixtures/: items.json  items.yaml  locations.json  locations.yaml  npcs.json  npcs.yaml  start_menu.json  start_menu.yaml
docs/data-model/schemas/: AbilityScore.json  CharacterCreationConfig.json  Class.json  Feat.json  (+28 more)
docs/systems/: architecture.md
game_ui/create_char_menu/: code.html
game_ui/main_loop/: code.html
game_ui/start_menu/: code.html
lore_txt/: aine.txt  aisling.txt  aodhan.txt  bjorn.txt  breithiun.txt  bronach.txt  caitriona.txt  fiona.txt  liobhan.txt
src/prophecycm/: __init__.py  __main__.py  core.py  core_ids.py  data_loader.py  schema_generation.py  session.py
tests/: test_combat_engine.py  test_content_loaders.py  test_creatures.py  test_dialogue.py  test_dialogue_loader.py  test_game_state_travel.py  test_gameplay_flows.py  test_leveling.py  test_objects.py  test_schema_generation.py  test_seed_content.py  test_serialization.py  test_start_menu_new_game_flow.py  test_stat_card_parser.py
tests/characters/: test_character_creation.py  test_equipment_interactions.py  test_equipment_requirements.py  test_feat_validation.py  test_player_progression.py  test_sample_players.py  test_seed_and_schemas.py
tools/: export_yaml_fixtures_to_json.py
(+40 files in other folders)
