[project]
name = "prophecycm"
version = "0.0.1"
description = "Narrative-first RPG framework skeleton"
authors = [{name = "ProphecyCM"}]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
